--- a/fotochest/apps/photo_manager/templates/photo_manager/photo.html
+++ b/fotochest/apps/photo_manager/templates/photo_manager/photo.html
@@ -16,15 +16,15 @@
 			    </ul>
 
 			<div class="btn-group photo-nav pull-left">
-			    {% if photo.get_previous %}
-				<a href="{{ photo.get_previous }}" class="btn"><i class="icon-arrow-left"></i> Previous</a>
+			    {% if photo.has_previous %}
+				<a href="{{ photo.get_previous_url }}" class="btn"><i class="icon-arrow-left"></i> Previous</a>
 				{% endif %}
 				<a href="{% url 'photo_fullscreen' album_slug=photo.album.slug photo_slug=photo.slug %}" class="btn"><i class="icon-picture"></i> Full Screen</a>
 				{% if enable_download %}
 				<a href="{% url 'photo_download' photo_id=photo.id %}" class="btn"><i class="icon-download-alt"></i> Download Full Size</a>
 				{% endif %}
-				{% if photo.get_next %}
-				<a href="{{ photo.get_next }}" class="btn">Next <i class="icon-arrow-right"></i></a>
+				{% if photo.has_next %}
+				<a href="{{ photo.get_next_url }}" class="btn">Next <i class="icon-arrow-right"></i></a>
 			    {% endif %}
 			</div>
 				<div class="thumbnail">
