Initial pass of  updating bootstrap.

--- a/fotochest/static/administrator/css/added.css
+++ b/fotochest/static/administrator/css/added.css
@@ -9,16 +9,19 @@
  *
  * ========================================================== */
 
-a.brand img
+a.navbar-brand img
 {
     margin-right: 6px;
     margin-bottom: 3px;
+    display: inline;
 }
-
+/*
 .navbar .navbar-inner
 {
     border-radius: 0;
 }
+*/
+
 
 .sidebar
 {
