--- a/fotochest/static/photo_manager/css/custom.css
+++ b/fotochest/static/photo_manager/css/custom.css
@@ -1,7 +1,7 @@
 /* ===========================================================
  * FotoChest
  * http://www.fotochest.com/
- * http://dstegelman.github.com/fotochest/
+ * http://dstegelman.github.io/fotochest/
  * ===========================================================
  *
  * Author: Derek Stegelman
