--- a/fotochest/templates/404.html
+++ b/fotochest/templates/404.html
@@ -4,7 +4,7 @@
 {% endblock nav %}
 {% block main_content %}
 
-<div class="span12">
+<div class="col-md-12">
     <div class="hero-unit">
             <h1>404 Not Found</h1>
             <p>Sorry, couldn't find the image or page you were looking for.</p>
