--- a/fotochest/templates/500.html
+++ b/fotochest/templates/500.html
@@ -3999,7 +3999,7 @@ a.thumbnail:hover {
 
 {% block main_content %}
 
-<div class="span12">
+<div class="col-md-12">
     <div class="hero-unit">
             <h1>500 System Error</h1>
             <p>We've encountered an error.  We've been notified and the error has been logged.</p>
