--- a/fotochest/templates/administrator/add_photos.html
+++ b/fotochest/templates/administrator/add_photos.html
@@ -42,7 +42,7 @@
 </div>
 <form id="fileupload" method="post" action="{% url 'file_uploader' location_slug=location_slug album_slug=album_slug user_id=request.user.id %}" enctype="multipart/form-data">{% csrf_token %}
         <div class="row fileupload-buttonbar">
-            <div class="span7">
+            <div class="col-md-7">
                 <span class="btn btn-primary fileinput-button">
                     <i class="icon-plus icon-white"></i>
                     <span>Add files...</span>
@@ -62,7 +62,7 @@
                 </button>
                 <input type="checkbox" class="toggle">
             </div>
-            <div class="span5 fileupload-progress fade">
+            <div class="col-md-5 fileupload-progress fade">
                 <div class="progress progress-success progres-striped active">
                     <div class="bar" style="width:0%"></div>
                 </div>
