--- a/fotochest/templates/administrator/albums.html
+++ b/fotochest/templates/administrator/albums.html
@@ -8,66 +8,72 @@
 
 {% block main_content %}
 
-<div class="modal hide fade" id="addAlbum">
-    <div class="modal-header">
-      <a data-dismiss="modal" class="close">×</a>
-      <h3>Add Album</h3>
-    </div>
-    <div class="modal-body">
-      <form method="POST" action="">
-      {% csrf_token %}
-      <label>Title</label>
-      <input type="text" name="title" class="span5">
-      <label>Description</label>
-      <textarea class="span5" name="description"></textarea>
-      <label>Parent Album</label>
-      {{ album_form.parent_album }}
-    </div>
-    <div class="modal-footer">
-      <a data-dismiss="modal" class="btn" href="#">Close</a>
-      <input type="submit" value="Add Album" class="btn btn-success">
-      
-    </div>
-    </form>
-  </div>
-  
-<div class="modal hide fade" id="chooseLocation">
-    <div class="modal-header">
-      <a data-dismiss="modal" class="close">×</a>
-      <h3>Choose Location</h3>
-    </div>
-    <div class="modal-body">
-      <h4>Select Album and Location</h4>
-      <p>Select the album and location that you want to associate you uploaded photos with.</p>
-      <form method="GET" action="{% url 'choose' %}">
-      <label>Album Name:</label>
-          <select name="album">
-              {% for album in form_albums %}
-              <option value="{{ album.slug }}">{{ album.title }}</option>
-              
-          {% endfor %}
-          
-          </select>
-          <input type="hidden" name="user_id" value="{{ request.user.id }}">
-          
-          <label>Location</label>
-          <select name="location">
-              {% for location in form_locations %}
-              <option value="{{ location.slug }}">{{ location }}</option>
-              
-          {% endfor %}
-          
-          </select>
+<div class="modal fade" id="addAlbum">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="addAlbumLabel">Add Album</h4>
+            </div>
+            <div class="modal-body">
+                <form method="POST" action="">
+                  {% csrf_token %}
+                  <label>Title</label>
+                  <input type="text" name="title" class="col-md-5">
+                  <label>Description</label>
+                  <textarea class="col-md-5" name="description"></textarea>
+                  <label>Parent Album</label>
+                  {{ album_form.parent_album }}
 
-      
+            </div>
+            <div class="modal-footer">
+                <a data-dismiss="modal" class="btn" href="#">Close</a>
+                <input type="submit" value="Add Album" class="btn btn-success">
+            </div>
+            </form>
+        </div>
     </div>
-    <div class="modal-footer">
-      <a data-dismiss="modal" class="btn" href="#">Close</a>
-      <input type="submit" value="Proceed to Upload" class="btn btn-primary">
-      
+</div>
+
+<div class="modal fade" id="chooseLocation">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="chooseLocationLabel">Choose Location</h4>
+            </div>
+            <div class="modal-body">
+                <h4>Select Album and Location</h4>
+              <p>Select the album and location that you want to associate you uploaded photos with.</p>
+              <form method="GET" action="{% url 'choose' %}">
+              <label>Album Name:</label>
+                  <select name="album">
+                      {% for album in form_albums %}
+                      <option value="{{ album.slug }}">{{ album.title }}</option>
+
+                  {% endfor %}
+
+                  </select>
+                  <input type="hidden" name="user_id" value="{{ request.user.id }}">
+
+                  <label>Location</label>
+                  <select name="location">
+                      {% for location in form_locations %}
+                      <option value="{{ location.slug }}">{{ location }}</option>
+
+                  {% endfor %}
+
+                  </select>
+            </div>
+            <div class="modal-footer">
+              <a data-dismiss="modal" class="btn" href="#">Close</a>
+              <input type="submit" value="Proceed to Upload" class="btn btn-primary">
+
+            </div>
+            </form>
+        </div>
     </div>
-    </form>
-  </div>
+</div>
 
 <div class="page-header">
 <h2>Albums</h2>
@@ -79,7 +85,7 @@
 {% endfor %}
 
 {% for album in albums %}
-    <li class="span3 album">
+    <li class="col-md-3 album">
         <a href="{% url 'admin_album_detail' album_id=album.id %}" class="thumbnail">
             {% if album.album_cover %}
                     {% load thumbnail %}
@@ -105,9 +111,9 @@
                         <form method="POST" action="{% url 'admin_albums' %}">
                           {% csrf_token %}
                           <label>Title</label>
-                          <input type="text" name="title" class="span5">
+                          <input type="text" name="title" class="col-md-5">
                           <label>Description</label>
-                          <textarea class="span5" name="description"></textarea>
+                          <textarea class="col-md-5" name="description"></textarea>
                           <input type="hidden" name="parent_album" value="{{ album.id }}">
                         </div>
                         <div class="modal-footer">
