--- a/fotochest/templates/administrator/base.html
+++ b/fotochest/templates/administrator/base.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,10 +9,10 @@
     <meta name="author" content="FotoChest Developers">
 
     <!-- Le styles -->
-    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}administrator/css/added.css" rel="stylesheet">
+    <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'common/css/common.css' %}" rel="stylesheet">
+    <link href="{% static 'administrator/css/added.css' %}" rel="stylesheet">
 
-    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -24,68 +25,67 @@
   </head>
 
   <body {% block extra_body %}{% endblock extra_body %}>
-<div class="modal hide fade" id="myModal">
-    <div class="modal-header">
-      <a data-dismiss="modal" class="close">×</a>
-      <h3>Add Photos</h3>
+
+<div class="modal fade" id="add_photos">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="add_photosLabel">Add Photos</h4>
+            </div>
+            <div class="modal-body">
+                <h4>Select Album and Location</h4>
+                  <p>Select the album and location that you want to associate you uploaded photos with.</p>
+                  <form method="GET" action="{% url 'choose' %}">
+                 <label>Album Name:</label>
+                  <select name="album">
+                      {% for album in form_albums %}
+                      <option value="{{ album.slug }}">{{ album.title }}</option>
+                  {% endfor %}
+                  </select>
+                  <input type="hidden" name="user_id" value="{{ request.user.id }}">
+                  <label>Location</label>
+                  <select name="location">
+                      {% for location in form_locations %}
+                      <option value="{{ location.slug }}">{{ location }}</option>
+                  {% endfor %}
+                  </select>
+            </div>
+            <div class="modal-footer">
+                <a data-dismiss="modal" class="btn" href="#">Close</a>
+                <input type="submit" value="Proceed to Upload" class="btn btn-primary">
+            </div>
+            </form>
+        </div>
     </div>
-    <div class="modal-body">
-      <h4>Select Album and Location</h4>
-      <p>Select the album and location that you want to associate you uploaded photos with.</p>
-      <form method="GET" action="{% url 'choose' %}">
-     <label>Album Name:</label>
-      <select name="album">
-          {% for album in form_albums %}
-          <option value="{{ album.slug }}">{{ album.title }}</option>
-      {% endfor %}
-      </select>
-      <input type="hidden" name="user_id" value="{{ request.user.id }}">
-      <label>Location</label>
-      <select name="location">
-          {% for location in form_locations %}
-          <option value="{{ location.slug }}">{{ location }}</option>
-      {% endfor %}
-      </select>
-      
-    </div>
-    <div class="modal-footer">
-      <a data-dismiss="modal" class="btn" href="#">Close</a>
-      <input type="submit" value="Proceed to Upload" class="btn btn-primary">
-      
-    </div>
-    </form>
   </div>
   
-    <div class="navbar">
-      <div class="navbar-inner">
+    <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="{% url 'admin_dashboard' %}"><img src="{{ STATIC_URL }}photo_manager/img/FotoChestLogoSmall.png" height="20" width="20">{{ app_name }}</a>
-          <div class="nav-collapse">
-            <ul class="nav">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="{% url 'admin_dashboard' %}"><img src="{{ STATIC_URL }}photo_manager/img/FotoChestLogoSmall.png" height="20" width="20">{{ app_name }}</a>
+            </div>
+
+          <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
               <li class="active"><a href="{% url 'admin_dashboard' %}">Dashboard <span class="label label-info">{{ thumbnails_building }}</span></a></li>
-              <li><a href="#myModal" data-toggle="modal">Add Photos</a></li>
+              <li><a href="#add_photos" data-toggle="modal">Add Photos</a></li>
               <li><a target="_blank" href="{% url 'homepage' %}">View Site</a></li>
             </ul>
-              <div class="btn-group pull-right">
-                  <a href="#" data-toggle="dropdown" class="btn dropdown-toggle">
-                      <i class="icon-user"></i> {{ request.user.username }}
-                      <span class="caret"></span>
-                  </a>
-                  <ul class="dropdown-menu">
-                      <li><a href="{% url 'logout' %}">Logout</a></li>
-                  </ul>
-              </div>
+            <ul class="nav navbar-nav navbar-right">
+
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{ request.user.username }} <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="{% url 'logout' %}">Logout</a></li>
+              </ul>
+            </li>
+            </ul>
           </div><!--/.nav-collapse -->
         </div>
-      </div>
     </div>
 
-    <div class="container">
+    <div class="container main">
     <div class="row">
     
     {% if messages %}
@@ -98,13 +98,13 @@
         {% endfor %}
     {% endif %}
     
-        <div class="span3 sidebar">
+        <div class="col-md-3 sidebar">
         {% block navigation %}{% endblock navigation %}
         
         {% block sidebar %}{% endblock sidebar %}
         
         </div> 
-          <div class="span9">
+          <div class="col-md-9">
           
           {% block main_content %}{% endblock main_content %}
           
@@ -118,15 +118,9 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{{ STATIC_URL }}bootstrap/js/jquery.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-transition.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-alert.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-modal.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-dropdown.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-tooltip.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-popover.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-button.js"></script>
-    <script src="{{ STATIC_URL }}administrator/js/admin.js"></script>
+    <script src="{% static 'common/js/jquery.js' %}"></script>
+    <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'administrator/js/admin.js' %}"></script>
     {% block extra_foot %}{% endblock extra_foot %}
 
   </body>
