--- a/fotochest/templates/administrator/nav.html
+++ b/fotochest/templates/administrator/nav.html
@@ -1,12 +1,11 @@
 <div style="padding: 8px 0;" class="well">
     <ul class="nav nav-list">
       
-      <li {% if nav == 1 %}class="active"{% endif %}><a href="{% url 'admin_dashboard' %}"><i class="{% if nav == 1 %}icon-white{% endif %} icon-home"></i> Home</a></li>
-      <li {% if nav == 2 %}class="active"{% endif %}><a href="{% url 'admin_albums' %}"><i class="{% if nav == 2%}icon-white{% endif %} icon-book"></i> Albums</a></li>
-      <li {% if nav == 3 %}class="active"{% endif %}><a href="{% url 'admin_locations' %}"><i class="{% if nav == 3 %}icon-white{% endif %} icon-map-marker"></i> Locations</a></li>
-      <li {% if nav == 5 %}class="active"{% endif %}><a href="{% url 'admin_user_list' %}"><i class="{% if nav == 5 %}icon-white{% endif %} icon-user"></i> Users</a></li>
-        <li class="nav-header">Settings</li>
-      <li {% if nav == 6 %}class="active"{% endif %}><a href="{% url 'admin_utilities' %}"><i class="icon-list-alt"></i> Utilities</a></li>
-      
+      <li {% if nav == 1 %}class="active"{% endif %}><a href="{% url 'admin_dashboard' %}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a></li>
+      <li {% if nav == 2 %}class="active"{% endif %}><a href="{% url 'admin_albums' %}"><span class="glyphicon glyphicon-book" aria-hidden="true"></span> Albums</a></li>
+      <li {% if nav == 3 %}class="active"{% endif %}><a href="{% url 'admin_locations' %}"><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> Locations</a></li>
+      <li {% if nav == 5 %}class="active"{% endif %}><a href="{% url 'admin_user_list' %}"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Users</a></li>
+      <li class="nav-header">Settings</li>
+        <li {% if nav == 6 %}class="active"{% endif %}><a href="{% url 'admin_utilities' %}"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Utilities</a></li>
     </ul>
 </div>
