--- a/fotochest/templates/administrator/photos.html
+++ b/fotochest/templates/administrator/photos.html
@@ -8,7 +8,7 @@
 <ul class="thumbnails row">
     {% endif %}
 
-    <li class="span2 thumb">
+    <li class="col-md-2 thumb">
         <a class="thumbnail" href="#">
             {% load thumbnail %}
             {% thumbnail photo.image "240x161" crop="center" quality=75 as im %}
