--- a/fotochest/templates/photo_manager/base.html
+++ b/fotochest/templates/photo_manager/base.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en"{% block extra_html %}{% endblock extra_html %}>
   <head>
@@ -8,9 +9,9 @@
     <meta name="author" content="Derek Stegelman">
 
     <!-- Le styles -->
-    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}photo_manager/css/custom.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'common/css/common.css' %}" rel="stylesheet">
+    <link href="{% static 'photo_manager/css/custom.css' %}" rel="stylesheet">
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -25,7 +26,7 @@
 
     {% block nav %}{% endblock nav %}
 
-    <div class="container">
+    <div class="container main">
 		<div class="row">
             {% if messages %}
             {% for message in messages %}
@@ -39,7 +40,7 @@
 			{% block main_content %}{% endblock main_content %}
 		</div>
         <footer class="footer">
-            <p>Powered by <a href="https://github.com/fotochest/fotochest">FotoChest</a> version {{ version }}</p>
+            <p>Powered by <a href="https://github.com/dstegelman/fotochest">FotoChest</a> version {{ version }}</p>
         </footer>
     </div> <!-- /container -->
     <!-- modal-gallery is the modal dialog used for the image gallery -->
@@ -71,14 +72,8 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{{ STATIC_URL }}bootstrap/js/jquery.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-transition.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-alert.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-modal.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-dropdown.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-tooltip.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-popover.js"></script>
-    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-button.js"></script>
+    <script src="{% static 'common/js/jquery.js' %}"></script>
+    <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 
     {% block extra_foot %}{% endblock extra_foot %}
   </body>
