--- a/fotochest/templates/photo_manager/index.html
+++ b/fotochest/templates/photo_manager/index.html
@@ -4,7 +4,7 @@
 {% endblock nav %}
 {% block main_content %}
 
-<div class="span12">
+<div class="col-md-12">
 {% if album_view %}
 <ul class="breadcrumb">
   <li>
@@ -33,7 +33,7 @@
 	{% endif %}
 	<ul class="thumbnails">
 	{% for album in child_albums.object_list %}
-		<li class="span3">
+		<li class="col-md-3">
 		    <a href="{{ album.get_absolute_url }}" class="thumbnail">
 		        {% if album.album_cover %}
 		                {% load thumbnail %}
