--- a/fotochest/templates/photo_manager/nav.html
+++ b/fotochest/templates/photo_manager/nav.html
@@ -1,22 +1,17 @@
-<div class="navbar">
-  <div class="navbar-inner">
+<div class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
-      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </a>
-      <a class="brand" href="{% url 'homepage' %}">{{ app_name }}</a>
-      <div class="nav-collapse">
-        <ul class="nav">
-          <li{% if current == 1 %} class="active"{% endif %}><a href="{% url 'homepage' %}">Home</a></li>
-          <li{% if current == 2 %} class="active"{% endif %}><a href="{% url 'albums' %}">Albums</a></li>
-          <li{% if current == 3 %} class="active"{% endif %}><a href="{% url 'map' %}">Map</a></li>
-        </ul>
-        <form action="/search/" method="GET" class="navbar-search pull-right">
-            <input type="text" name="q" placeholder="Search" class="search-query span2">
-        </form>
-      </div><!--/.nav-collapse -->
+        <div class="navbar-header">
+            <a class="navbar-brand" href="{% url 'homepage' %}">{{ app_name }}</a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li{% if current == 1 %} class="active"{% endif %}><a href="{% url 'homepage' %}">Home</a></li>
+                <li{% if current == 2 %} class="active"{% endif %}><a href="{% url 'albums' %}">Albums</a></li>
+                <li{% if current == 3 %} class="active"{% endif %}><a href="{% url 'map' %}">Map</a></li>
+            </ul>
+            <form action="/search/" method="GET" class="navbar-search pull-right navbar-form" role="search">
+                <input type="text" name="q" placeholder="Search" class="search-query span2">
+            </form>
+        </div>
     </div>
-  </div>
 </div>
