--- a/fotochest/templates/photo_manager/snippets/item.html
+++ b/fotochest/templates/photo_manager/snippets/item.html
@@ -1,5 +1,5 @@
 {% load thumbnail %}
-<li class="span3 {% if forloop.counter == 5 or forloop.counter == 9 or forloop.counter == 13 %}clear-photo{% endif %}{% if photo.image|is_portrait %} portrait{% endif %}">
+<li class="col-md-3 {% if forloop.counter == 5 or forloop.counter == 9 or forloop.counter == 13 %}clear-photo{% endif %}{% if photo.image|is_portrait %} portrait{% endif %}">
     <a href="{{ photo.get_absolute_url }}" class="thumbnail polaroid" title="{{ photo.title }}">
 
 {% thumbnail photo.image "300x300" as im %}
