--- a/fotochest/templates/photo_manager/snippets/smaller_item.html
+++ b/fotochest/templates/photo_manager/snippets/smaller_item.html
@@ -1,4 +1,4 @@
-<li class="span2 {% if forloop.counter == 5 or forloop.counter == 9 or forloop.counter == 13 %}clear-photo{% endif %}">
+<li class="col-md-2 {% if forloop.counter == 5 or forloop.counter == 9 or forloop.counter == 13 %}clear-photo{% endif %}">
 <a href="{{ photo.get_absolute_url }}" class="thumbnail polaroid">
 {% load thumbnail %}
 {% thumbnail photo.image "300x220" as im %}
@@ -6,6 +6,5 @@
 {% endthumbnail %}
 <span>{{ photo.title }}</span>
 </a>
-
 </li>
 
