--- a/fotochest/templates/administrator/albums.html
+++ b/fotochest/templates/administrator/albums.html
@@ -17,13 +17,19 @@
             </div>
             <div class="modal-body">
                 <form method="POST" action="">
-                  {% csrf_token %}
-                  <label>Title</label>
-                  <input type="text" name="title" class="col-md-5">
-                  <label>Description</label>
-                  <textarea class="col-md-5" name="description"></textarea>
-                  <label>Parent Album</label>
-                  {{ album_form.parent_album }}
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label for="id_title">Title</label>
+                        <input type="text" id="id_title" name="title" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="id_description">Description</label>
+                        <textarea id="id_description" name="description" rows="3" class="form-control"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="id_parent_album">Parent Album</label>
+                        {{ album_form.parent_album }}
+                    </div>
 
             </div>
             <div class="modal-footer">
