--- a/fotochest/static/administrator/css/added.css
+++ b/fotochest/static/administrator/css/added.css
@@ -28,6 +28,16 @@ a.navbar-brand img
     margin-top: 73px
 }
 
+.sidebar .dl-horizontal dt
+{
+    width: 119px;
+}
+
+.sidebar .dl-horizontal dd
+{
+    margin-left: 129px;
+}
+
 #map
 {
     border-radius: 5px 5px 5px 5px;
