Remove bullets from dashboar and album listing #238.

--- a/fotochest/templates/administrator/albums.html
+++ b/fotochest/templates/administrator/albums.html
@@ -84,7 +84,7 @@
 <div class="page-header">
 <h2>Albums</h2>
 </div>
-<ul class="thumbnails">
+<ul class="thumbnails list-unstyled">
 
 {% for photo in photos %}
     {% include "photo_manager/snippets/item.html" %}
