Typo in users listing.

--- a/fotochest/templates/administrator/users.html
+++ b/fotochest/templates/administrator/users.html
@@ -14,7 +14,7 @@
     <tr>
         <td>{{ user.username }}</td>
         <td>{{ user.is_staff }}</td>
-        <td>{{ users.is_superuser }}</td>
+        <td>{{ user.is_superuser }}</td>
     </tr>
 
     {% endfor %}
