--- a/fotochest/templates/photo_manager/albums.html
+++ b/fotochest/templates/photo_manager/albums.html
@@ -28,7 +28,7 @@
     <h2>{{ album.title }}</h2>
 </div>
 
-<ul class="thumbnails">
+<ul class="thumbnails list-unstyled">
 
 {% for photo in photos %}
     {% include "photo_manager/snippets/item.html" %}
