Fixes and removal of tags for alerts #237.

--- a/fotochest/templates/administrator/base.html
+++ b/fotochest/templates/administrator/base.html
@@ -90,11 +90,7 @@
     
     {% if messages %}
     {% for message in messages %}
-        <div class="alert alert-success">
-          <a class="close" data-dismiss="alert">×</a>
-          <h4 class="alert-heading">{{ message.tags }}</h4>
-          <p>{{ message }}</p>
-        </div>
+        <div class="alert alert-success" role="alert">{{ message }}</div>
         {% endfor %}
     {% endif %}
     
