--- a/fotochest/templates/administrator/add_photos.html
+++ b/fotochest/templates/administrator/add_photos.html
@@ -64,7 +64,7 @@
             </div>
             <div class="col-md-5 fileupload-progress fade">
                 <div class="progress progress-success progres-striped active">
-                    <div class="bar" style="width:0%"></div>
+                    <div class="progress-bar" style="width:0%"></div>
                 </div>
                 <div class="progress-extended">&nbsp;</div>
             </div>
