--- a/fotochest/templates/administrator/login.html
+++ b/fotochest/templates/administrator/login.html
@@ -68,7 +68,7 @@
       {% csrf_token %}
         <h2 class="form-signin-heading">Please sign in</h2>
         {% if form.errors %}
-            <div class="alert alert-error">
+            <div class="alert alert-danger">
             {% for error in form.non_field_errors %}
             {{ error }}
             {% endfor %}
