--- a/fotochest/templates/administrator/albums.html
+++ b/fotochest/templates/administrator/albums.html
@@ -40,55 +40,10 @@
         </div>
     </div>
 </div>
-
-<div class="modal fade" id="chooseLocation">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="chooseLocationLabel">Choose Location</h4>
-            </div>
-            <div class="modal-body">
-                <h4>Select Album and Location</h4>
-              <p>Select the album and location that you want to associate you uploaded photos with.</p>
-              <form method="GET" action="{% url 'choose' %}">
-              <label>Album Name:</label>
-                  <select name="album">
-                      {% for album in form_albums %}
-                      <option value="{{ album.slug }}">{{ album.title }}</option>
-
-                  {% endfor %}
-
-                  </select>
-                  <input type="hidden" name="user_id" value="{{ request.user.id }}">
-
-                  <label>Location</label>
-                  <select name="location">
-                      {% for location in form_locations %}
-                      <option value="{{ location.slug }}">{{ location }}</option>
-
-                  {% endfor %}
-
-                  </select>
-            </div>
-            <div class="modal-footer">
-              <a data-dismiss="modal" class="btn" href="#">Close</a>
-              <input type="submit" value="Proceed to Upload" class="btn btn-primary">
-
-            </div>
-            </form>
-        </div>
-    </div>
-</div>
-
 <div class="page-header">
 <h2>Albums</h2>
 </div>
 <ul class="thumbnails list-unstyled">
-
-{% for photo in photos %}
-    {% include "photo_manager/snippets/item.html" %}
-{% endfor %}
 
 {% for album in albums %}
     <li class="col-md-3 album">
@@ -104,32 +59,37 @@
         <span>{{ album.title }}</span>
         </a>
 
-
         <!-- Add child album -->
-                <div class="modal hide fade" id="addChildAlbum_{{ album.id }}">
-                    <div class="modal-header">
-                        <a data-dismiss="modal" class="close">×</a>
-                        <h3>Add a Child Album</h3>
-                    </div>
-                    <div class="modal-body">
-                        <h4>Add a child album to {{ album }}</h4>
-
-                        <form method="POST" action="{% url 'admin_albums' %}">
-                          {% csrf_token %}
-                          <label>Title</label>
-                          <input type="text" name="title" class="col-md-5">
-                          <label>Description</label>
-                          <textarea class="col-md-5" name="description"></textarea>
-                          <input type="hidden" name="parent_album" value="{{ album.id }}">
-                        </div>
-                        <div class="modal-footer">
-                          <a data-dismiss="modal" class="btn" href="#">Close</a>
-                          <input type="submit" value="Add Album" class="btn btn-success">
-
-                        </div>
+                <div class="modal fade" id="addChildAlbum_{{ album.id }}">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                <h4 class="modal-title" id="addChildAlbumLabel">Add a Child Album</h4>
+                            </div>
+                            <div class="modal-body">
+                                <h4>Add a child album to {{ album }}</h4>
+                                <form method="POST" action="{% url 'admin_albums' %}">
+                                  {% csrf_token %}
+                                    <div class="form-group">
+                                        <label for="id_title">Title</label>
+                                        <input type="text" name="title" id="id_title" maxlength="250" class="form-control">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="id_description">Description</label>
+                                        <textarea class="col-md-5 form-control" name="description"></textarea>
+                                    </div>
+                                  <input type="hidden" name="parent_album" value="{{ album.id }}">
+                            </div>
+                            <div class="modal-footer">
+                                <a data-dismiss="modal" class="btn" href="#">Close</a>
+                                <input type="submit" value="Add Child Album" class="btn btn-success">
+                            </div>
                         </form>
-
-                </div>
+                        </div>
+                    </div>
+                    </div>
+        <!-- Choose Location Modal -->
                 <div class="modal hide fade" id="addPhotosToAlbum_{{ album.id }}">
                     <div class="modal-header">
                         <a data-dismiss="modal" class="close">×</a>
