--- a/fotochest/templates/administrator/albums.html
+++ b/fotochest/templates/administrator/albums.html
@@ -90,34 +90,37 @@
                     </div>
                     </div>
         <!-- Choose Location Modal -->
-                <div class="modal hide fade" id="addPhotosToAlbum_{{ album.id }}">
-                    <div class="modal-header">
-                        <a data-dismiss="modal" class="close">×</a>
-                        <h3>Choose Location</h3>
-                    </div>
-                    <div class="modal-body">
-                        <h4>Select Location for photos in {{ album }}</h4>
-                        <p>Select the location that you want to associate you uploaded photos with.</p>
-                        <form method="GET" action="{% url 'choose' %}">
+                <div class="modal fade" id="addPhotosToAlbum_{{ album.id }}">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                <h4 class="modal-title" id="chooseLocationLabel">Choose Location</h4>
+                            </div>
+                            <div class="modal-body">
+                                <h4>Select Location for photos in {{ album }}</h4>
+                                <p>Select the location that you want to associate you uploaded photos with.</p>
+                                <form method="GET" action="{% url 'choose' %}">
 
-                            <input type='hidden' name='album' value='{{ album.slug }}'>
-                            <input type="hidden" name="user_id" value="{{ request.user.id }}">
+                                    <input type='hidden' name='album' value='{{ album.slug }}'>
+                                    <input type="hidden" name="user_id" value="{{ request.user.id }}">
 
-                            <label>Location</label>
-                            <select name="location">
-                                {% for location in form_locations %}
-                                <option value="{{ location.slug }}">{{ location }}</option>
-                                {% endfor %}
-                            </select>
+                                    <label>Location</label>
+                                    <select name="location">
+                                        {% for location in form_locations %}
+                                        <option value="{{ location.slug }}">{{ location }}</option>
+                                        {% endfor %}
+                                    </select>
+                            </div>
+                            <div class="modal-footer">
+                                <a data-dismiss="modal" class="btn" href="#">Close</a>
+                                <input type="submit" value="Proceed to Upload" class="btn btn-primary">
+                            </div>
+                            </form>
+                        </div>
                     </div>
-                    <div class="modal-footer">
-                        <a data-dismiss="modal" class="btn" href="#">Close</a>
-                        <input type="submit" value="Proceed to Upload" class="btn btn-primary">
-
-                    </div>
-                    </form>
                 </div>
-
+        <!-- End Choose Location Modal -->
                 <div class="btn-group">
                     <button class="btn btn-primary">Actions</button>
                     <button class="btn dropdown-toggle btn-primary" data-toggle="dropdown">
